--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+:root {
+  --dark: #1a1d1f;
+  --darkGrey: #2e343a;
+  --lightGrey: #96a8b6;
+  --light: #d5e2ed;
+  --primary: #2196f3;
+  --contrastText: white;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  background-color: var(--dark);
+  font-family: "Raleway", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  outline: none;
+  border: none;
+  background-color: var(--primary);
+  padding: 10px;
+  color: var(--contrastText);
+  font-weight: bolder;
+  width: 100px;
+  cursor: pointer;
+}
+
+.heroTitle {
+  background-color: var(--dark);
+  height: 0.5em;
+  width: 6em;
+  color: white;
+  font-size: 6em;
+  font-weight: 900;
+  margin: 20px 0 20px 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  line-height: 0;
 }
